--- a/home/user/config/i3/config
+++ b/home/user/config/i3/config
@@ -149,6 +149,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# Custom
+bindsym $mod+Escape exec i3lock -e -c 000000
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
