--- a/home/user/config/i3/config
+++ b/home/user/config/i3/config
@@ -151,6 +151,21 @@ bindsym $mod+r mode "resize"
 
 # Custom
 bindsym $mod+Escape exec i3lock -e -c 000000
+mode "move-workspace" {
+        bindsym j move workspace to output left
+        bindsym k move workspace to output down
+        bindsym l move workspace to output up
+        bindsym semicolon move workspace to output right
+
+        bindsym Left move workspace to output left
+        bindsym Down move workspace to output down
+        bindsym Up move workspace to output up
+        bindsym Right move workspace to output right
+
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+bindsym $mod+m mode "move-workspace"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
