use pulse for volume control

--- a/home/user/config/i3/config
+++ b/home/user/config/i3/config
@@ -186,9 +186,9 @@ bindsym $mod+m mode "move-workspace"
 ######################
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -D pulse sset Master 5%+ #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer -D pulse sset Master 5%- #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id amixer -D pulse set Master 1+ toggle # mute sound
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
@@ -220,7 +220,7 @@ workspace 1 output eDP-1
 workspace 2 output eDP-1
 # i3-save-tree --workspace 1 > ~/.i3/workspace-1.json
 exec --no-startup-id "i3-msg 'workspace 1; append_layout /home/roman/.i3/layouts/browser.json'"
-exec --no-startup-id "google-chrome"
+exec --no-startup-id "firefox"
 exec --no-startip-id "gnome-terminal"
 exec --no-startup-id "gnome-terminal"
 
