--- a/home/user/config/i3/config
+++ b/home/user/config/i3/config
@@ -180,6 +180,7 @@ mode "move-workspace" {
         bindsym Escape mode "default"
 }
 bindsym $mod+m mode "move-workspace"
+bindsym Control+Print exec gnome-screenshot -i
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
