--- a/home/user/config/i3/config
+++ b/home/user/config/i3/config
@@ -212,6 +212,7 @@ bindsym XF86AudioPrev exec playerctl previous
 # finds out, if available)
 bar {
         status_command i3status
+        tray_output primary
 }
 
 #exec_always bash "xrandr --output HDMI-2 --off --output HDMI-1 --mode 3840x2160 --pos 0x0 --rotate normal --output DP-1 --off --output eDP-1 --primary --mode 2560x1440 --pos 600x2160 --rotate normal --output DP-2 --pos 0x0 --auto"
@@ -221,7 +222,7 @@ workspace 1 output eDP-1
 workspace 2 output eDP-1
 # i3-save-tree --workspace 1 > ~/.i3/workspace-1.json
 exec --no-startup-id "i3-msg 'workspace 1; append_layout /home/roman/.i3/layouts/browser.json'"
-exec --no-startup-id "firefox"
+exec --no-startup-id "google-chrome"
 exec --no-startip-id "gnome-terminal"
 exec --no-startup-id "gnome-terminal"
 
@@ -230,4 +231,4 @@ exec --no-startup-id "remmina"
 exec --no-startip-id "virtualbox"
 exec --no-startup-id "gnome-terminal"
 
-
+exec --no-startup-id nm-applet
